--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,6 +63,19 @@
         "shared_mutex": "cpp",
         "stop_token": "cpp",
         "semaphore": "cpp",
-        "list": "cpp"
+        "list": "cpp",
+        "strstream": "cpp",
+        "filesystem": "cpp",
+        "__assert": "cpp",
+        "__bit_reference": "cpp",
+        "__config": "cpp",
+        "__debug": "cpp",
+        "__hash_table": "cpp",
+        "__locale": "cpp",
+        "__node_handle": "cpp",
+        "__split_buffer": "cpp",
+        "__tuple": "cpp",
+        "ios": "cpp",
+        "queue": "cpp"
     }
 }
